# university

./: .clang_complete  .gdb_history  .gitignore  .hw1.cpp.swp  .hw14.cpp.swn  .hw14.cpp.swo  .hw2.cpp.swp  .index.html.swp  .lab0B.css.swp  .lab0B.html.swp  .notes8_27_18.swp  .notesch38_27_18.swp  2overload.cpp  2pointerExtra.cpp  CMakeLists.txt  Makefile  README.md  a.out  core  error  hw1.cpp  hw10.cpp  hw14.cpp  hw2.cpp  hw3.cpp  hw4.cpp  hw6.cpp  hw8.cpp  index.html  index.php  kill_philosophers  lab0.html  lab0A.html  lab0B.css  lab0B.html  lab2.css  lab2.js  lab2.mysql  lab2.txt  notes8_27_18  (+6 more)
1/: a.out  homework3.bak  homework3.rkt  main.c
2/: .Assignment_2.c.swo  .Assignment_2.c.swp  .gdb_history  Assignment_2.c  a.out  a2_revise.c
3/: .as3.c.swp  .gdb_history  a.out  as3.c  copy.c  homework3.rkt  input2  input3
4/: .as4.c.swo  .as4.c.swp  .gdb_history  .gitignore  a.out  as4.c  homework4.rkt  input1
6/: familyTree.pl
7/: 7.pl  hw7.docx
avl-tree/: TestAVL1.java  (+6 more)
comp465/misc/test0/: CMakeLists.txt  Makefile
comp465/misc/test0/include/glad/: glad.h
comp465/misc/test0/include/glm/gtx/: bit.inl  fast_exponential.hpp  multiple.hpp  ocl_type.hpp  projection.hpp
comp465/opengl-setup/: CMakeLists.txt
comp465/opengl-setup/src/: OpenGlVk.cpp
comp465/opengl-setup/vs/CS465TestProject/: OpenGlVk.cpp  glad.c
comp465/opengl-setup/vs/CS465TestProject/CS465TestProject/: CS465TestProject.vcxproj  CS465TestProject.vcxproj.filters
comp465/opengl-setup/vs/CS465TestProject/CS465TestProject/Debug/CS465TestProject.tlog/: CL.read.1.tlog  CL.write.1.tlog
comp465/opengl-setup/vs/CS465TestProject/Debug/: CS465TestProject.ilk
hw2/: CMakeLists.txt  Homework2Answers.txt  homework2.txt  write-up.txt
hw2/include/: MyShaderLoader.h
hw2/include/glm/gtc/: half_float.hpp  random.inl  swizzle.hpp
hw2/include/glm/gtx/: bit.hpp  epsilon.hpp  extend.hpp  multiple.inl  number_precision.hpp  optimum_pow.hpp  rotate_vector.hpp  simd_mat4.hpp  string_cast.hpp  vec1.hpp  vector_access.hpp  vector_angle.hpp
project2/: CMakeLists.txt  Makefile  README.md  project2.unitypackage  writeup.md
project2/include/dvr/: args.h  client.h  connector.h  defs.h  handler.h  logger.h  server.h  shell.h  signals.h  topology.h  updater.h
project2/src/: args.cpp  client.cpp  connector.cpp  handler.cpp  logger.cpp  main.cpp  server.cpp  shell.cpp  topology.cpp  updater.cpp  utils.cpp
(+537 files in other folders)
