cmake_minimum_required(VERSION 3.9)
project(test0)

set(SOURCE_FILES src/main.cpp src/glad.c include/stb_image.h)
include_directories(include)
link_directories(lib)
add_executable(test0 ${SOURCE_FILES})
if (WIN32)
target_link_libraries(test0 glfw3 opengl32)
elseif(UNIX)
target_link_libraries(test0 glfw dl)
endif()
